Bug fix changes, such as tournaments seem to load correctly. Teams can be selected when an tournament has been changed. And the error bars is fixed. However this did come at an cost of an code explosion in the canvas file. There are 6 different possible lines which all have a separeted definition in spacing. Toolboxes are made more visible also. Aspects that needs to be changes is the contents of the toolboxs to represent the correct numbering.

--- a/dashboard.css
+++ b/dashboard.css
@@ -7,6 +7,37 @@ body {
   padding-top: 50px;
 }
 
+div.tooltiplines {   
+  position: absolute;           
+  text-align: center;           
+  width: 100px;                  
+  height: 70px;                 
+  padding: 2px;             
+  font: 12px sans-serif;        
+  background: #F2E394;   
+  border: 3px;      
+  border-radius: 8px;           
+  pointer-events: none;
+  font-weight: bold;
+    border-style: solid;
+    border-color:  #1E1E1E;      
+}
+
+div.tooltip {   
+  position: absolute;           
+  text-align: center;           
+  width: 120px;                  
+  height: 40px;                 
+  padding: 2px;             
+  font: 12px sans-serif;        
+  background: #F2E394;   
+  border: 3px;      
+  border-radius: 8px;           
+  pointer-events: none;
+  font-weight: bold;
+    border-style: solid;
+    border-color:  #1E1E1E;      
+}
 
 .scoresButtons{
   background-color: #428bca;
